--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using WebCakePalas
-@using WebCakePalas.Models
+﻿@using KonditoriPallasSite
+@using KonditoriPallasSite.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
