--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -19,6 +19,12 @@
                 <li class="nav-item"><a class="nav-link" asp-controller="Home" asp-action="Lunch">Lunch</a></li>
                 <li class="nav-item"><a class="nav-link" asp-controller="Home" asp-action="About">Om oss</a></li>
                 <li class="nav-item"><a class="nav-link" asp-controller="Home" asp-action="Contact">Kontakt</a></li>
+                @if (User.Identity?.IsAuthenticated ?? false)
+                {
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="AdminProducts" asp-action="Index">Admin – produkter</a>
+                    </li>
+                }
 
                 @if (User.Identity?.IsAuthenticated ?? false)
                 {
@@ -46,5 +52,7 @@
     </footer>
 
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    @RenderSection("Scripts", required: false)
+
 </body>
 </html>
