--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -31,7 +31,7 @@
             <p>Krispigt bröd och färska bullar – precis som det ska vara.</p>
         </div>
         <div class="col-md-4">
-            <img src="~/images/coffee.jpg" class="img-fluid rounded shadow" alt="Kaffe" />
+            <img src="~/images/bulle.jpg" class="img-fluid rounded shadow" alt="Bullar" />
             <h3>Kaffe & Fika</h3>
             <p>Ta en paus och njut av en perfekt kopp tillsammans med något sött.</p>
         </div>
