--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -67,16 +67,19 @@
         </div>
     </nav>
 
-    <div class="container mt-4">
-        @RenderBody()
-    </div>
+ 
+        <div class="page-wrapper d-flex flex-column min-vh-100">
+            <main class="flex-grow-1 container mt-4">
+                @RenderBody()
+            </main>
 
-    <footer class="text-center mt-4">
-        <p>&copy; @DateTime.Now.Year Konditori Pallas</p>
-    </footer>
+            <footer class="text-center mt-4">
+                <p>&copy; @DateTime.Now.Year Konditori Pallas</p>
+            </footer>
+        </div>
 
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    @RenderSection("Scripts", required: false)
+        <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+        @RenderSection("Scripts", required: false)
+    </body>
 
-</body>
 </html>
