--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -3,10 +3,13 @@
 }
 
 <h2>Adminpanel</h2>
-<p>Här kan du hantera webbplatsens innehåll, t.ex. produkter och beställningar.</p>
+<p>Här kan du hantera webbplatsens innehåll, t.ex. produkter och kontaktmeddelanden.</p>
 
 <ul class="list-group">
     <li class="list-group-item">
         <a asp-controller="AdminProducts" asp-action="Index">🧁 Hantera produkter</a>
+    </li>
+    <li class="list-group-item">
+        <a asp-controller="AdminMessages" asp-action="Index">📨 Visa kontaktmeddelanden</a>
     </li>
 </ul>
