--- a/Views/Menu/Bageri.cshtml
+++ b/Views/Menu/Bageri.cshtml
@@ -8,15 +8,15 @@
 
     <div class="row mt-4">
         <div class="col-md-4">
-            <img src="~/images/bread1.jpg" class="img-fluid rounded shadow" alt="Levainbröd" />
+            <img src="~/images/bread.jpg" class="img-fluid rounded shadow" alt="Levainbröd" />
             <h4>Levainbröd</h4>
         </div>
         <div class="col-md-4">
-            <img src="~/images/bread2.jpg" class="img-fluid rounded shadow" alt="Kanelbullar" />
+            <img src="~/images/bulle.jpg" class="img-fluid rounded shadow" alt="Kanelbullar" />
             <h4>Kanelbullar</h4>
         </div>
         <div class="col-md-4">
-            <img src="~/images/bread3.jpg" class="img-fluid rounded shadow" alt="Surdegsbaguette" />
+            <img src="~/images/bread2.jpg" class="img-fluid rounded shadow" alt="Surdegsbaguette" />
             <h4>Surdegsbaguette</h4>
         </div>
     </div>
