--- a/Views/Menu/Tartor.cshtml
+++ b/Views/Menu/Tartor.cshtml
@@ -8,15 +8,15 @@
 
     <div class="row mt-4">
         <div class="col-md-4">
-            <img src="~/images/cake1.jpg" class="img-fluid rounded shadow" alt="Prinsesstårta" />
+            <img src="~/images/cake.jpg" class="img-fluid rounded shadow" alt="Prinsesstårta" />
             <h4>Prinsesstårta</h4>
         </div>
         <div class="col-md-4">
-            <img src="~/images/cake2.jpg" class="img-fluid rounded shadow" alt="Chokladmoussetårta" />
+            <img src="~/images/chokladcake.jpg" class="img-fluid rounded shadow" alt="Chokladmoussetårta" />
             <h4>Chokladmoussetårta</h4>
         </div>
         <div class="col-md-4">
-            <img src="~/images/cake3.jpg" class="img-fluid rounded shadow" alt="Jordgubbstårta" />
+            <img src="~/images/jurdgubbscake.jpg" class="img-fluid rounded shadow" alt="Jordgubbstårta" />
             <h4>Jordgubbstårta</h4>
         </div>
     </div>
