2810med fungrande prislistan

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -37,7 +37,7 @@
         </div>
 
         <div class="col-md-4">
-            <a asp-controller="Home" asp-action="Contact">
+            <a asp-controller="Products" asp-action="Index" asp-route-category="Bageri">
                 <img src="~/images/bulle.jpg" class="img-fluid rounded shadow" alt="Kaffe & Fika" />
             </a>
             <h3>Kaffe & Fika</h3>
