--- a/Views/Menu/Lunch.cshtml
+++ b/Views/Menu/Lunch.cshtml
@@ -8,15 +8,15 @@
 
     <div class="row mt-4">
         <div class="col-md-4">
-            <img src="~/images/lunch1.jpg" class="img-fluid rounded shadow" alt="Soppa med bröd" />
+            <img src="~/images/soppa.jpg" class="img-fluid rounded shadow" alt="Soppa med bröd" />
             <h4>Soppa med bröd</h4>
         </div>
         <div class="col-md-4">
-            <img src="~/images/lunch2.jpg" class="img-fluid rounded shadow" alt="Quiche Lorraine" />
+            <img src="~/images/lorranie.jpg" class="img-fluid rounded shadow" alt="Quiche Lorraine" />
             <h4>Quiche Lorraine</h4>
         </div>
         <div class="col-md-4">
-            <img src="~/images/lunch3.jpg" class="img-fluid rounded shadow" alt="Sallad med kyckling" />
+            <img src="~/images/sallad1.jpg" class="img-fluid rounded shadow" alt="Sallad med kyckling" />
             <h4>Kycklingsallad</h4>
         </div>
     </div>
