--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -49,6 +49,6 @@
 <section class="cta text-center mt-5">
     <h2>Beställ din tårta idag!</h2>
     <p>Vi skräddarsyr tårtor för alla tillfällen – födelsedagar, bröllop och fest.</p>
-    <a class="nav-link" asp-controller="Home" asp-action="Contact" class="btn-main"> Kontakta oss</a>
+    <a class="nav-link btn-main" asp-controller="Home" asp-action="Contact">Kontakta oss</a>
 </section>
 
